Adds handlers for room entitiy;
