# gen/restapi/operations/patch_users_username_responses.go
@@ -109,6 +109,11 @@ const PatchUsersUsernameNotFoundCode int = 404
 swagger:response patchUsersUsernameNotFound
 */
 type PatchUsersUsernameNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *PatchUsersUsernameNotFoundBody `json:"body,omitempty"`
 }
 
 // NewPatchUsersUsernameNotFound creates PatchUsersUsernameNotFound with default headers values
@@ -117,12 +122,27 @@ func NewPatchUsersUsernameNotFound() *PatchUsersUsernameNotFound {
 	return &PatchUsersUsernameNotFound{}
 }
 
+// WithPayload adds the payload to the patch users username not found response
+func (o *PatchUsersUsernameNotFound) WithPayload(payload *PatchUsersUsernameNotFoundBody) *PatchUsersUsernameNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the patch users username not found response
+func (o *PatchUsersUsernameNotFound) SetPayload(payload *PatchUsersUsernameNotFoundBody) {
+	o.Payload = payload
+}
+
 // WriteResponse to the client
 func (o *PatchUsersUsernameNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
 	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
 }
 
 // PatchUsersUsernameConflictCode is the HTTP code returned for type PatchUsersUsernameConflict
